# move3d_ros

./: .guiparams  CMakeLists.txt  README.md  package.xml  plot_vel.m
data/trajs/: trajectory001.traj  trajectory004.traj  trajectory007.traj  trajectory011.traj
data/trajs/aterm_sequence/: trajectory000.traj  trajectory001.traj  trajectory002.traj  trajectory003.traj  trajectory004.traj  trajectory005.traj  trajectory007.traj  trajectory011.traj  trajectory012.traj  trajectory013.traj  trajectory014.traj  trajectory015.traj  trajectory017.traj
data/trajs/pr2/: traj_0.traj
guiparams/: pr2  pr2_collaboration_aterm  pr2_collaboration_logan
include/: move3d_ros_camera.hpp  move3d_ros_gui.hpp  move3d_ros_gui.ui  move3d_ros_human.hpp  move3d_ros_node.hpp  move3d_ros_replanning.hpp  move3d_ros_robot.hpp  move3d_ros_robot_split.hpp
launch/: move3d_pr2.launch  move3d_pr2_collaboration.launch  move3d_pr2_display.launch  move3d_pr2_simulation.launch
src/: move3d_ros_camera.cpp  move3d_ros_gui.cpp  move3d_ros_human.cpp  move3d_ros_node.cpp  move3d_ros_replanning.cpp  move3d_ros_robot.cpp  move3d_ros_robot_split.cpp
trajs/: trajectory000.traj  trajectory002.traj  trajectory003.traj  trajectory005.traj  trajectory006.traj  trajectory008.traj  trajectory009.traj  trajectory010.traj
trajs/aterm_sequence/: trajectory006.traj  trajectory008.traj  trajectory009.traj  trajectory010.traj  trajectory016.traj  trajectory018.traj
